# Nirikshana

./: README.md  app.py  pyproject.toml
models/: best_model.pkl  model_comparison.csv  tfidf_vectorizer.pkl
notebooks/: fake_vs_real_news.ipynb
src/: predict.py  preprocessing.py  train.py
