[project]
name = "fake-vs-real-news-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "nltk>=3.9.4",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "streamlit>=1.59.0",
    "xgboost>=3.3.0",
]
